--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "homepage": "https://github.com/CrisIsla/wspbotdie#readme",
   "dependencies": {
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.23.0"
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus"
   }
 }
