--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/CrisIsla/wspbotdie#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "openai": "^4.51.0",
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.1.7",
     "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus"
